# dp

./: .gitignore  .gitmodules  README.md  carter_optim.nsys-rep  carter_optim.sqlite  main.py  pyproject.toml
conf/: config.yaml
conf/robot/: carter.yaml  pendulum.yaml
conf/sim/: default.yaml
src/demos/: angular_correction.py  hinge_correction.py  positional_correction.py
src/dp/: ball.py  carter.py  carter_o.py  carter_optim copy.py  carter_optim.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
src/dp_utils/: __init__.py  bodies.py  colors.py  constants.py  general.py  joints.py  plot2d.py  plot3d.py  renderer.py  trajectory.py  worlds.py
src/examples/: ball_bounce copy.py  ball_bounce.py  ball_xpdb.py  granular.py  pendulum_simple.py  pendulum_wall copy.py  pendulum_wall.py  pendulum_warp.py  quadruped.py  test.py
src/optim/: ball.py  ball_bounce.py  example_bounce.py  loss.py  pendulum copy.py  pendulum.py  pendulum_simple.py  pendulum_wall.py  pendulum_warp.py  test.py
src/sim/: __init__.py  articulation.py  integrator_featherstone.py  integrator_xpbd.py
src/tests/: angular_correction.py  positional_correction.py  quaternion_operations.py  rotation_conversion.py  velocity_update.py
src/xpbd/: collision_demo.py  collision_gradient.py  integrator_xpbd.py  test_position.py  test_rotation.py
src/xpbd_np/: angular_velocity_test.py  hinge.py  hinge_orientation.py  position_correction.py  rotation_correction.py  simple_rotation_3d.py  utils.py
src/xpbd_pytorch/: animation.py  body.py  box_old.py  collision.py  constants.py  (+9 more)
(+184 files in other folders)
